objects/vAuto_Legacy_Asset__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>vAuto Legacy Assets</relationshipLabel>
        <relationshipName>vAuto_Legacy_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Date__c</fullName>
        <label>Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_Name__c</fullName>
        <label>Asset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Price__c</fullName>
        <label>Asset Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billable_Date__c</fullName>
        <label>Billable Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_From_Product_Description__c</fullName>
        <formula>Product__r.Description</formula>
        <label>Description (From Product Description)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inactive_Date__c</fullName>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Date__c</fullName>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <label>Legacy Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Launch_Date__c</fullName>
        <label>No Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>vAuto Legacy Assets</relationshipLabel>
        <relationshipName>vAuto_Legacy_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>vAuto Legacy Asset</label>
    <nameField>
        <label>vAuto Legacy Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>vAuto Legacy Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>